[gd_scene load_steps=6 format=3 uid="uid://h336jjftw51t"]

[ext_resource type="Script" path="res://assets/scripts/paths/follow_path.gd" id="1_b7m4v"]
[ext_resource type="PackedScene" uid="uid://0nmldd68aq5b" path="res://assets/scenes/npcs/enemies/ninja_spirit.tscn" id="1_i64q7"]

[sub_resource type="Curve2D" id="Curve2D_kup43"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 296, 2)
}
point_count = 2

[sub_resource type="Animation" id="Animation_8hgv0"]
resource_name = "move_along_path"
length = 12.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 6, 10, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2r6ul"]
_data = {
"move_along_path": SubResource("Animation_8hgv0")
}

[node name="NinjaSpiritPath" type="Path2D" node_paths=PackedStringArray("spirit")]
curve = SubResource("Curve2D_kup43")
script = ExtResource("1_b7m4v")
spirit = NodePath("PathFollow2D/NinjaSpirit")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(0, 2)
rotates = false

[node name="NinjaSpirit" parent="PathFollow2D" instance=ExtResource("1_i64q7")]

[node name="PathMovementAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_2r6ul")
}

[connection signal="animation_finished" from="PathFollow2D/NinjaSpirit/NinjaSpiritAnimation" to="." method="_on_ninja_spirit_animation_animation_finished"]

[editable path="PathFollow2D/NinjaSpirit"]
